--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,12 @@
 <p>
     Click on the form you want to view from the list below.
 </p>
+
+<ul>
+    <li>
+        <a href="/branson">Branson</a>
+    </li>
+    <li>
+        <a href="/sanmateo">San Mateo</a>
+    </li>
+</ul>
