--- a/views/sanmateo/index.handlebars
+++ b/views/sanmateo/index.handlebars
@@ -5,6 +5,8 @@ Choose the form
     </li>
     <li>
         <a href="/sanmateo/ar_template_pc_2">AR Template PC 2</a>
-
+    </li>
+    <li>
+        <a href="/sanmateo/agenda_report_form">Agenda Report Form</a>
     </li>
 </ul>
