--- a/views/branson/index.handlebars
+++ b/views/branson/index.handlebars
@@ -1,6 +1,5 @@
 Choose the form
 <ul>
-    <li>
-        <a href="">Resolution Template</a>
-    </li>
+    <li><a href="/branson/CodeAmendment">Code Amendment</a></li>
+    <li><a href="">Resolution Template</a></li>
 </ul>
