--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,6 +48,11 @@
         <div>
             <a href="/">Return</a>
         </div>
+        <div>
+            <p>
+                Editing <b style="text-transform: uppercase">{{form}}</b> for: <b>{{client}}</b>, and their URL is <a href="{{clientUrl}}" target="_blank">{{clientUrl}}</a>
+            </p>
+        </div>
         {{{ body }}}
     </div>
     <footer class="container-fluid text-center footer">
