--- a/views/branson/index.handlebars
+++ b/views/branson/index.handlebars
@@ -1,5 +1,6 @@
 Choose the form
 <ul>
     <li><a href="/branson/CodeAmendment">Code Amendment</a></li>
+    <li><a href="/branson/bid-proposal">Bid Proposal</a></li>
     <li><a href="">Resolution Template</a></li>
 </ul>
