--- a/views/branson/index.handlebars
+++ b/views/branson/index.handlebars
@@ -2,5 +2,8 @@ Choose the form
 <ul>
     <li><a href="/branson/CodeAmendment">Code Amendment</a></li>
     <li><a href="/branson/bid-proposal">Bid Proposal</a></li>
+    <li><a href="/branson/Contract-Approval-Addendum">Contract-Approval-Addendum</a></li>
+    <li><a href="/branson/Contract-Approval-Contract">Contract-Approval-Contract</a></li>
+    <li><a href="/branson/Contract-Approval-Renewal">Contract-Approval-Renewal</a></li>
     <li><a href="">Resolution Template</a></li>
 </ul>
