--- a/views/branson/Contract-Approval-Addendum.handlebars
+++ b/views/branson/Contract-Approval-Addendum.handlebars
@@ -192,9 +192,72 @@
 		<textarea class="form-control" name="DetailedAnalysis" id="DetailedAnalysis"
 			placeholder="Required if 'other' is chosen on Financial Impact"></textarea>
 	</div>
-
 </div>
+<br/>
+<br/>
+<legend>Code Amendment</legend>
+<div class="row">
+    <!--Attached Exhibits-->
+	<div class="col-sm-2 form-group">
+		<label for="IncludeOrdinance">Include <i>(or create)</i> an ordinance?:</label>
+	</div>
+	<div class="col-sm-10 form-group">
+		<select id="IncludeOrdinance" class="form-control" name="IncludeOrdinance" onChange="AddOrdinance(this.id)">
+			<option></option>
+			<option value="yes">Yes</option>
+			<option value="no">No</option>
+		</select>
+	</div>
+	<div class="col-xs-12"></div>
+	<!--ordinance Section-->
+	<div id="ordinanceSection" >
+		<!--Chapter Number-->
+		<div class="col-sm-2 form-group">
+			<label for="ChapterNumber">Chapter Number:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="number" class="form-control ordinanceCh" id="ChapterNumber" name="ChapterNumber" placeholder="#"> 
+		</div>
+		<!--Section Number-->
+		<div class="col-sm-2 form-group">
+			<label for="SectionNumber">Section Number:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="number" class="form-control ordinanceCh" id="SectionNumber" name="SectionNumber" placeholder="#"> 
+		</div>
+		<!--Project-->
+		<div class="col-sm-2 form-group">
+				<label for="ProjectName">Project:</label>
+			</div>
+			<div class="col-sm-10 form-group">
+				<input type="text" class="form-control ordinanceCh" id="ProjectName" name="ProjectName" placeholder="Project Name"> 
+			</div>
+		<!--Project-->
+		<div class="col-sm-2 form-group">
+			<label for="CodeSectionName">Code Section Name:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="text" class="form-control ordinanceCh" id="CodeSectionName" name="CodeSectionName" placeholder="Code Section Name"> 
+		</div>
+		<div class="col-xs-12"></div>
 
+		<!--Project-->
+		<div class="col-sm-2 form-group">
+			<label for="CodeChanges">Code Changes:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<textarea type="text" class="form-control ordinanceCh" id="CodeChanges" name="CodeChanges" placeholder="Code Changes"> </textarea>
+		</div>
+		<!--Date Effective-->
+		<div class="col-sm-2 form-group">
+			<label for="EffectiveDate">Date Effective:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="date" class="ordinanceCh form-control" id="EffectiveDate" name="EffectiveDate">
+		</div>
+		
+	</div>
+</div>
 
 
 <script>
