--- a/views/branson/Contract-Approval-Addendum.handlebars
+++ b/views/branson/Contract-Approval-Addendum.handlebars
@@ -211,50 +211,57 @@
 	<div class="col-xs-12"></div>
 	<!--ordinance Section-->
 	<div id="ordinanceSection" >
-		<!--Chapter Number-->
+		<!--Vendor Name-->
 		<div class="col-sm-2 form-group">
-			<label for="ChapterNumber">Chapter Number:</label>
+			<label for="VendorName">Vendor:</label>
 		</div>
 		<div class="col-sm-10 form-group">
-			<input type="number" class="form-control ordinanceCh" id="ChapterNumber" name="ChapterNumber" placeholder="#"> 
+			<input type="text" class="form-control ordinanceCh" id="Vendor" name="Vendor" placeholder="Vendor"> 
 		</div>
-		<!--Section Number-->
+		<!--Vendor Name-->
 		<div class="col-sm-2 form-group">
-			<label for="SectionNumber">Section Number:</label>
+			<label for="ProjectName">Project:</label>
 		</div>
 		<div class="col-sm-10 form-group">
-			<input type="number" class="form-control ordinanceCh" id="SectionNumber" name="SectionNumber" placeholder="#"> 
+			<input type="text" class="form-control ordinanceCh" id="ProjectName" name="ProjectName" placeholder="Project"> 
 		</div>
-		<!--Project-->
+		<!--Brief Project Description-->
 		<div class="col-sm-2 form-group">
-				<label for="ProjectName">Project:</label>
+			<label for="BriefDescription">Brief Description:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="text" class="form-control ordinanceCh" id="BriefDescription" name="BriefDescription" placeholder="TELL WHAT THE PROJECT OR ADDENDUM IS"> 
+		</div>
+		<!--Brief Project Description-->
+		<div class="col-sm-2 form-group">
+			<label for="BriefReason">Brief Reason:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="text" class="form-control ordinanceCh" id="BriefReason" name="BriefReason" placeholder="TELL WHY THE PROJECT OR ADDENDUM IS BEING DONE"> 
+		</div>
+		<!--Project Amount-->
+		<div class="col-sm-2 form-group">
+			<label for="ProjectAmount">Project Amount:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+
+			<div class="input-group">
+      			<div class="input-group-addon">$</div>
+				<input type="text" class="form-control ordinanceCh" id="ProjectAmount" name="ProjectAmount" placeholder="0.00"> 
 			</div>
-			<div class="col-sm-10 form-group">
-				<input type="text" class="form-control ordinanceCh" id="ProjectName" name="ProjectName" placeholder="Project Name"> 
-			</div>
-		<!--Project-->
+		</div>
+
+		<!--Project Amount-->
 		<div class="col-sm-2 form-group">
-			<label for="CodeSectionName">Code Section Name:</label>
+			<label for="MaximumAmount">Maximum Amount:</label>
 		</div>
 		<div class="col-sm-10 form-group">
-			<input type="text" class="form-control ordinanceCh" id="CodeSectionName" name="CodeSectionName" placeholder="Code Section Name"> 
+			<div class="input-group">
+      			<div class="input-group-addon">$</div>
+				<input type="text" class="form-control ordinanceCh" id="MaximumAmount" name="MaximumAmount" placeholder="0.00"> 
+			</div>
 		</div>
 		<div class="col-xs-12"></div>
-
-		<!--Project-->
-		<div class="col-sm-2 form-group">
-			<label for="CodeChanges">Code Changes:</label>
-		</div>
-		<div class="col-sm-10 form-group">
-			<textarea type="text" class="form-control ordinanceCh" id="CodeChanges" name="CodeChanges" placeholder="Code Changes"> </textarea>
-		</div>
-		<!--Date Effective-->
-		<div class="col-sm-2 form-group">
-			<label for="EffectiveDate">Date Effective:</label>
-		</div>
-		<div class="col-sm-10 form-group">
-			<input type="date" class="ordinanceCh form-control" id="EffectiveDate" name="EffectiveDate">
-		</div>
 		
 	</div>
 </div>
@@ -267,11 +274,30 @@
 		$("#ROW_CEQAVals").hide();
 		$("#ROW_EnvironmentalDetermination").hide();
 		$("textarea").attr('rows', '5');
+		$('#ordinanceSection').hide();
 
 		$('[data-toggle="tooltip"]').tooltip();
+
 		displayUsersSelect('InitiatedBy')
 		populateDept();
 	})
+
+function AddOrdinance(id){
+		var choiceVal = $('#'+id).val();
+		if (choiceVal == "yes"){
+			$('#ordinanceSection').show();
+			$('.ordinanceCh').each(function(ind,val){
+				var valId = $(val).attr('id');
+				$(val).attr('name','Document2.'+valId)
+			})
+		} else {
+			$('.ordinanceCh').each(function(ind,val){
+				var valId = $(val).attr('id');
+				$(val).attr('name', +valId)
+			})
+			$('#ordinanceSection').hide();
+		}
+	}
 
 	/*
 	* name: displayUsersSelect(userElement)
