--- a/views/branson/Contract-Approval-Contract.handlebars
+++ b/views/branson/Contract-Approval-Contract.handlebars
@@ -194,7 +194,78 @@
 	</div>
 
 </div>
+<br/>
+<br/>
+<legend>Code Amendment</legend>
+<div class="row">
+    <!--Attached Exhibits-->
+	<div class="col-sm-2 form-group">
+		<label for="IncludeOrdinance">Include <i>(or create)</i> an ordinance?:</label>
+	</div>
+	<div class="col-sm-10 form-group">
+		<select id="IncludeOrdinance" class="form-control" name="IncludeOrdinance" onChange="AddOrdinance(this.id)">
+			<option></option>
+			<option value="yes">Yes</option>
+			<option value="no">No</option>
+		</select>
+	</div>
+	<div class="col-xs-12"></div>
+	<!--ordinance Section-->
+	<div id="ordinanceSection" >
+		<!--Vendor Name-->
+		<div class="col-sm-2 form-group">
+			<label for="VendorName">Vendor:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="text" class="form-control ordinanceCh" id="Vendor" name="Vendor" placeholder="Vendor"> 
+		</div>
+		<!--Vendor Name-->
+		<div class="col-sm-2 form-group">
+			<label for="ProjectName">Project:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="text" class="form-control ordinanceCh" id="ProjectName" name="ProjectName" placeholder="Project"> 
+		</div>
+		<!--Brief Project Description-->
+		<div class="col-sm-2 form-group">
+			<label for="BriefDescription">Brief Description:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="text" class="form-control ordinanceCh" id="BriefDescription" name="BriefDescription" placeholder="TELL WHAT THE PROJECT OR ADDENDUM IS"> 
+		</div>
+		<!--Brief Project Description-->
+		<div class="col-sm-2 form-group">
+			<label for="BriefReason">Brief Reason:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="text" class="form-control ordinanceCh" id="BriefReason" name="BriefReason" placeholder="TELL WHY THE PROJECT OR ADDENDUM IS BEING DONE"> 
+		</div>
+		<!--Project Amount-->
+		<div class="col-sm-2 form-group">
+			<label for="ProjectAmount">Project Amount:</label>
+		</div>
+		<div class="col-sm-10 form-group">
 
+			<div class="input-group">
+      			<div class="input-group-addon">$</div>
+				<input type="text" class="form-control ordinanceCh" id="ProjectAmount" name="ProjectAmount" placeholder="0.00"> 
+			</div>
+		</div>
+
+		<!--Project Amount-->
+		<div class="col-sm-2 form-group">
+			<label for="MaximumAmount">Maximum Amount:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<div class="input-group">
+      			<div class="input-group-addon">$</div>
+				<input type="text" class="form-control ordinanceCh" id="MaximumAmount" name="MaximumAmount" placeholder="0.00"> 
+			</div>
+		</div>
+		<div class="col-xs-12"></div>
+		
+	</div>
+</div>
 
 
 <script>
@@ -204,11 +275,27 @@
 		$("#ROW_CEQAVals").hide();
 		$("#ROW_EnvironmentalDetermination").hide();
 		$("textarea").attr('rows', '5');
-
+		$('#ordinanceSection').hide();
 		$('[data-toggle="tooltip"]').tooltip();
 		displayUsersSelect('InitiatedBy')
 		populateDept();
 	})
+function AddOrdinance(id){
+		var choiceVal = $('#'+id).val();
+		if (choiceVal == "yes"){
+			$('#ordinanceSection').show();
+			$('.ordinanceCh').each(function(ind,val){
+				var valId = $(val).attr('id');
+				$(val).attr('name','Document2.'+valId)
+			})
+		} else {
+			$('.ordinanceCh').each(function(ind,val){
+				var valId = $(val).attr('id');
+				$(val).attr('name', +valId)
+			})
+			$('#ordinanceSection').hide();
+		}
+	}
 
 	/*
 	* name: displayUsersSelect(userElement)
