--- a/views/branson/Contract-Approval-Renewal.handlebars
+++ b/views/branson/Contract-Approval-Renewal.handlebars
@@ -194,7 +194,92 @@
 	</div>
 
 </div>
+<br/>
+<br/>
+<legend>Code Amendment</legend>
+<div class="row">
+    <!--Attached Exhibits-->
+	<div class="col-sm-2 form-group">
+		<label for="IncludeOrdinance">Include <i>(or create)</i> an ordinance?:</label>
+	</div>
+	<div class="col-sm-10 form-group">
+		<select id="IncludeOrdinance" class="form-control" name="IncludeOrdinance" onChange="AddOrdinance(this.id)">
+			<option></option>
+			<option value="yes">Yes</option>
+			<option value="no">No</option>
+		</select>
+	</div>
+	<div class="col-xs-12"></div>
+	<!--ordinance Section-->
+	<div id="ordinanceSection" >
+		<!--Vendor Name-->
+		<div class="col-sm-2 form-group">
+			<label for="Vendor">Vendor:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="text" class="form-control ordinanceCh" id="Vendor" name="Vendor" placeholder="Vendor"> 
+		</div>
+		<!--Vendor Name-->
+		<div class="col-sm-2 form-group">
+			<label for="ProjectName">Project:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="text" class="form-control ordinanceCh" id="ProjectName" name="ProjectName" placeholder="Project"> 
+		</div>
+		<!--Brief Project Description-->
+		<div class="col-sm-2 form-group">
+			<label for="OriginalBidDate">Original Bid Date:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="date" class="form-control ordinanceCh" id="OriginalBidDate" name="OriginalBidDate" > 
+		</div>
+		<!--Brief Project Description-->
+		<div class="col-sm-2 form-group">
+			<label for="NumberofYears">Number of Years:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<input type="number" class="form-control ordinanceCh" id="NumberofYears" name="NumberofYears"> 
+		</div>
+		<!--Brief Project Description-->
+		<div class="col-sm-2 form-group">
+			<label for="RenewalPeriod">Renewal Period:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<select class="form-control ordinanceCh" id="RenewalPeriod" name="RenewalPeriod" onChange="isOther('RenewalPeriod', true)"> 
+				<option></option>
+				<option value="Renewal Period 1st">Renewal Period 1st</option>
+				<option value="Renewal Period 2nd">Renewal Period 2nd</option>
+				<option value="Renewal Period 3rd">Renewal Period 3rd</option>
+				<option value="Renewal Period 4th">Renewal Period 4th</option>
+				<option value="Other">Other</option>
+			</select>
+		</div>
+		<!--Project Amount-->
+		<div class="col-sm-2 form-group">
+			<label for="ProjectAmount">Project Amount:</label>
+		</div>
+		<div class="col-sm-10 form-group">
 
+			<div class="input-group">
+      			<div class="input-group-addon">$</div>
+				<input type="text" class="form-control ordinanceCh" id="ProjectAmount" name="ProjectAmount" placeholder="0.00"> 
+			</div>
+		</div>
+
+		<!--Project Amount-->
+		<div class="col-sm-2 form-group">
+			<label for="MaximumAmount">Maximum Amount:</label>
+		</div>
+		<div class="col-sm-10 form-group">
+			<div class="input-group">
+      			<div class="input-group-addon">$</div>
+				<input type="text" class="form-control ordinanceCh" id="MaximumAmount" name="MaximumAmount" placeholder="0.00"> 
+			</div>
+		</div>
+		<div class="col-xs-12"></div>
+		
+	</div>
+</div>
 
 
 <script>
@@ -205,10 +290,28 @@
 		$("#ROW_EnvironmentalDetermination").hide();
 		$("textarea").attr('rows', '5');
 
+		$('#ordinanceSection').hide();
+
 		$('[data-toggle="tooltip"]').tooltip();
 		displayUsersSelect('InitiatedBy')
 		populateDept();
 	})
+function AddOrdinance(id){
+		var choiceVal = $('#'+id).val();
+		if (choiceVal == "yes"){
+			$('#ordinanceSection').show();
+			$('.ordinanceCh').each(function(ind,val){
+				var valId = $(val).attr('id');
+				$(val).attr('name','Document2.'+valId)
+			})
+		} else {
+			$('.ordinanceCh').each(function(ind,val){
+				var valId = $(val).attr('id');
+				$(val).attr('name', +valId)
+			})
+			$('#ordinanceSection').hide();
+		}
+	}
 
 	/*
 	* name: displayUsersSelect(userElement)
@@ -251,20 +354,31 @@
     /**
     * Required: inputName = name of select element that you are editing.
     */
-	function isOther(inputName) {
+	function isOther(inputName, doc2) {
 		var inputVal = $('#' + inputName).val();
 		if (inputVal == "Other") {
 			//change the name of the select input to inputName_old so as to not risk sending incorrect data
-			$('#' + inputName).attr('name', inputName + "_old")
 
 			//
+			$('#' + inputName).attr('name', inputName + "_old")
 			$('#' + inputName).parent().attr('id', inputName + "_parent")
-			$('#' + inputName + '_parent').append("<input type='text' name='" + inputName + "' id='" + inputName + "_other' class='form-control' placeholder='Explain'>")
+			if(doc2){
+				$('#' + inputName + '_parent').append("<input type='text' name='Document2." + inputName + "' id='" + inputName + "_other' class='form-control' placeholder='Explain'>")
+			} else{
+				$('#' + inputName + '_parent').append("<input type='text' name='" + inputName + "' id='" + inputName + "_other' class='form-control' placeholder='Explain'>")
+
+			}
+
 
 			//assign focus to new input
 			$('#' + inputName + '_other').focus();
 		} else {
-			$('#' + inputName).attr('name', inputName)
+			if(doc2){
+				$('#' + inputName).attr('name', "Document2." + inputName)
+			} else{
+				$('#' + inputName).attr('name', inputName)
+			}
+
 			$('#' + inputName + '_other').remove();
 			$('#' + inputName).parent().attr('id', " ")
 		}
