--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,4 +9,7 @@
     <li>
         <a href="/sanmateo">San Mateo</a>
     </li>
+    <li>
+        <a href="/goodyear">GoodYear</a>
+    </li>
 </ul>
