--- a/views/branson/index.handlebars
+++ b/views/branson/index.handlebars
@@ -5,5 +5,6 @@ Choose the form
     <li><a href="/branson/Contract-Approval-Addendum">Contract-Approval-Addendum</a></li>
     <li><a href="/branson/Contract-Approval-Contract">Contract-Approval-Contract</a></li>
     <li><a href="/branson/Contract-Approval-Renewal">Contract-Approval-Renewal</a></li>
-    <li><a href="">Resolution Template</a></li>
+    <li><a href="/branson/Ordinance-for-Everything-Else">Ordinance for Everything Else</a></li>
+    <li><a href="/branson/Resolution-Template">Resolution Template</a></li>
 </ul>
