--- a/views/goodyear/index.handlebars
+++ b/views/goodyear/index.handlebars
@@ -1,1 +1,6 @@
-good year home
+Choose the form
+<ul>
+    <li>
+        <a href="/goodyear/Staff_Report_New">Staff Report New</a>
+    </li>
+</ul>
